[package]
name = "guessing_game"
version = "0.1.0"
authors = ["yanxu <243071373@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3

[dependencies]
rand = "^0.6.0"